# nem-reader

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  Example_NEM12_incomplete_interval_daily_totals.csv  LICENSE  MANIFEST.in  README.md  mkdocs.yml  print_examples.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml  pytest.yml  pythonpackage.yml  pythontests.yml  ruff.yml
docs/: conf.py  cuDF_GPU.md  file-format.md  file-format.rst  gen_ref_pages.py  index.md  index.rst  installation.md  installation.rst  quickstart.md  quickstart.rst  requirements.txt
examples/: Example-NEM12.csv  Example_NEM12_actual_interval.csv  Example_NEM12_multiple_meters.csv  Example_NEM12_multiple_quality.csv  Example_NEM12_substituted_interval.csv  Example_NEM13_consumption_data.csv  Example_NEM13_forward_estimate.csv  NEM12#DATA_16081001#WBAYM#3044076134.V01  NEM12#DATA_TEST.V01  NEM13#DATA_14121801#WBAYM#3044076134.V01
examples/invalid/: Example_NEM12_15min_200_30min_300.csv  Example_NEM12_15min_200_30min_400.csv  Example_NEM12_30min_200_15min_300.csv  Example_NEM12_30min_200_15min_400.csv  Example_NEM12_empty.csv  Example_NEM12_incomplete_interval.csv  Example_NEM12_missing_header.csv
examples/unzipped/: Example_NEM12_actual_interval.csv  Example_NEM12_different_interval_length.csv  Example_NEM12_month_solar.csv  Example_NEM12_multiple_meters.csv  Example_NEM12_multiple_quality.csv  Example_NEM12_no_scheduled_read.csv  Example_NEM12_partialchannel.csv  Example_NEM12_powercor.csv  Example_NEM12_powercor_missing_fields.csv  Example_NEM12_substituted_interval.csv  Example_NEM12_upper_case_units.csv  Example_NEM13_consumption_data.csv  Example_NEM13_forward_estimate.csv  Example_WesternPower.csv
nemreader/: __init__.py  __main__.py  cli.py  nem_objects.py  nem_reader.py  output_db.py  outputs.py  split_days.py
notebooks/: pandasVcuDF.ipynb
tests/: test_actual_interval.py  test_cli.py  test_consumption_data.py  test_dataframe_pivot.py  test_day_split.py  test_examples.py  test_file_outputs.py  test_header_datestamp.py  test_incomplete_files.py  test_invalid_interval_mixing.py  test_legacy.py  test_many_nmis.py  test_multiple_quality.py  test_open_examples.py  test_optional_columns.py  test_output_db.py  test_powercor.py  test_unit_capitalisation.py
