[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nemreader"
authors = [{ name = "Alex Guinman", email = "alex@guinman.id.au" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
]
keywords = ["energy", "NEM12", "NEM13"]
requires-python = ">=3.9"
dynamic = ["version", "description"]
dependencies = ["pandas", "sqlite_utils", "typer"]

[project.optional-dependencies]
test = ["ruff", "pytest >=2.7.3", "pytest-cov", "mypy"]

[project.urls]
Source = "https://github.com/aguinane/nem-reader/"
Documentation = "https://nem-reader.readthedocs.io/en/latest/"

[project.scripts]
nemreader = "nemreader.cli:app"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-ra --failed-first --showlocals --durations=3 --cov=nemreader"

[tool.coverage.run]
omit = ["*/version.py", '*/__main__.py']

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 90

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "N", "SIM", "UP"]
