[metadata]
name = nemreader
version = attr: nemreader.version.__version__
author = Alex Guinman
author_email = alex@guinman.id.au
description = Parse NEM12 and NEM13 metering data files
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/aguinane/nem-reader
project_urls =
    Bug Tracker = https://github.com/aguinane/nem-reader/issues
    Documentation = https://nem-reader.readthedocs.io/en/latest/
keywords = energy, NEM12, NEM13
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
packages = nemreader
include_package_data = True
install_requires =
    pandas
    sqlite_utils

[options.extras_require]
cli = typer
test = pytest

[options.entry_points]
console_scripts =
    nemreader=nemreader.cli:cli

[mypy]
ignore_missing_imports = True

[flake8]
max-line-length = 88
max-complexity = 10
extend-ignore = E203,EW503
exclude = .git,__pycache__,docs,build,dist,venv,logs

[tool:pytest]
addopts = -ra --failed-first --showlocals --durations=3
